# cfa-ngm-widget

./: .gitignore  .lintr  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  deploy.yaml  devfile.yaml  evaluate_scenarios.py  main.py  mkdocs.yml  pyproject.toml  sandbox_nk.py
.github/actions/mkdocs-cache/: action.yaml
.github/workflows/: mkdocs-build.yaml  mkdocs-deploy.yaml  run-pytest.yaml
R/: evaluate_results.R
docs/: approach.md  index.md  linear_algebra.md  ode_ngm.md  primer.md
ngm/: __init__.py  app.py  linalg.py  widget.py
scenarios/: kenya.yaml
scratch/: config.yaml  demo.qmd  results.qmd  simulate.py  test-ngm.R  viz.qmd
scripts/: config.yaml  demo.qmd  simulate.py  widget.py
tests/: test_app.py  test_linalg.py  test_ngm.py  test_widget.py
utils/: dal.py  data_munging.py  simulate_scenario.py
widget/: widget.py
