[tool.poetry]
name = "ngm"
version = "0.1.0"
description = ""
authors = ["Paige Miller <yub1@cdc.gov>", "Scott Olesen <ulp7@cdc.gov>", "Andy Magee <rzg0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
