[tool.poetry]
name = "ngm"
version = "0.1.0"
description = ""
authors = ["Paige Miller <yub1@cdc.gov>", "Scott Olesen <ulp7@cdc.gov>", "Andy Magee <rzg0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocs-material = "^9.5.46"
mdx-truly-sane-lists = "^1.3"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
